--- a/www/css/spinner.css
+++ b/www/css/spinner.css
@@ -1,3 +1,8 @@
+.spinner-text {
+    font-family: "Nunito", sans-serif;
+    font-weight:300;
+    font-size: 1.3em;
+}
 .spinner
 {
     width:100px;
@@ -17,7 +22,7 @@
     left: -11px;
     top: -10px;
     border-radius:50%;
-    box-shadow:0px 3px 3px #7E8F7C;
+    box-shadow:0px 3px 3px #C63D0F;
     -webkit-animation:1.3s spin linear infinite;
     -ms-animation:1.3s spin linear infinite;
     -moz-animation:1.3s spin linear infinite;
