--- a/www/css/app.css
+++ b/www/css/app.css
@@ -70,6 +70,11 @@ html, body {
     border: solid 1px #3B3738;
 }
 
+x-appbar {
+    position: absolute;
+    top: 0;
+    z-index: 1;
+}
 x-appbar > h1 {
     font-family: 'Dancing Script', 'cursive';
     font-size: 1.4em;
@@ -77,4 +82,51 @@ x-appbar > h1 {
 /*************************************/
 .scrollable {
     overflow-y: scroll;
+}
+
+.snapped {
+    margin-top: 43px;
+}
+
+#wall {
+    width: 90%;
+    padding: 10px;
+}
+
+#columns {
+	-webkit-column-count: 3;
+	-webkit-column-gap: 5px;
+	-webkit-column-fill: auto;
+	-moz-column-count: 3;
+	-moz-column-gap: 5px;
+	-moz-column-fill: auto;
+	column-count: 3;
+	column-gap: 5px;
+	column-fill: auto;
+}
+
+.pin {
+	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+	margin: 0 2px 5px;
+	-webkit-column-break-inside: avoid;
+	-moz-column-break-inside: avoid;
+	column-break-inside: avoid;
+	padding: 5px;
+	padding-bottom: 2px;
+    background-color: white;
+}
+
+.pin img {
+	width: 100%;
+	border-bottom: 1px solid #ccc;
+	padding-bottom: 5px;
+	margin-bottom: 5px;
+}
+
+.pin p {
+    font-family: "Nunito", sans-serif;
+    font-weight: 300;
+    font-size: 0.7em;
+	margin: 0;
+    text-align: center;
 }
