--- a/www/css/app.css
+++ b/www/css/app.css
@@ -90,44 +90,64 @@ x-appbar > h1 {
 }
 
 #wall {
-    width: 90%;
+    width: 93%;
     padding: 10px;
 }
 
 #columns {
-	-webkit-column-count: 3;
-	-webkit-column-gap: 5px;
-	-webkit-column-fill: auto;
-	-moz-column-count: 3;
-	-moz-column-gap: 5px;
-	-moz-column-fill: auto;
-	column-count: 3;
-	column-gap: 5px;
-	column-fill: auto;
+    -webkit-column-count: 3;
+    -webkit-column-gap: 5px;
+    -webkit-column-fill: auto;
+    -moz-column-count: 3;
+    -moz-column-gap: 5px;
+    -moz-column-fill: auto;
+    column-count: 3;
+    column-gap: 5px;
+    column-fill: auto;
 }
 
 .pin {
-	box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
-	margin: 0 2px 5px;
-	-webkit-column-break-inside: avoid;
-	-moz-column-break-inside: avoid;
-	column-break-inside: avoid;
-	padding: 5px;
-	padding-bottom: 2px;
+    box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+    margin: 0 2px 5px;
+    -webkit-column-break-inside: avoid;
+    -moz-column-break-inside: avoid;
+    column-break-inside: avoid;
+    padding: 5px;
+    padding-bottom: 2px;
     background-color: white;
 }
 
 .pin img {
-	width: 100%;
-	border-bottom: 1px solid #ccc;
-	padding-bottom: 5px;
-	margin-bottom: 5px;
+    width: 100%;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .pin p {
     font-family: "Nunito", sans-serif;
     font-weight: 300;
     font-size: 0.7em;
-	margin: 0;
+    margin: 0;
     text-align: center;
+}
+
+.bt-pin {
+    z-index: 1;
+    position: absolute;
+    bottom: 0px;
+    left: 50%;
+    margin-left: -30px;
+    height:30px;
+    width:60px;
+    border-radius: 90px 90px 0 0;
+    -moz-border-radius: 90px 90px 0 0;
+    -webkit-border-radius: 90px 90px 0 0;  
+    background-color: #C63D0F;
+    text-align: center;
+    color: white;
+}
+
+.bt-pin > i {
+    margin-top: 9px;
 }
